...
        android:gravity="center"
        android:background="@color/background_color"
        android:text="@string/exo_controls_next_description"
        android:textColor="@color/colorPrimary"
        android:textSize="@dimen/ingredients_design_text_size"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/next_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/video_view" />
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
...
        android:text="@string/next_button_text"
        android:id="@+id/next_button"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <Button
        android:id="@+id/prev_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/default_constraint_margin"
        android:layout_marginStart="@dimen/default_constraint_margin"
        android:background="@color/colorPrimary"
        android:textColor="@android:color/white"
...
